added final hint

--- a/_posts/2021-05-28-Level-1.md
+++ b/_posts/2021-05-28-Level-1.md
@@ -51,11 +51,18 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<p>We now know how the statuses were pbeing posted to the database, but we don't know how the attacker managed to replace the VM container image. Let's investigate that.</p>
 	<p> </p>
 </details>
-
+	
 <details>
 	<summary><b>Hint 5</b></summary>
 	<p> </p>
 	<p>Navigate to the Logs Explorer and query for the VM Instance resource type. The most recent events show that the api-engine was stopped and restarted, and going back a bit, the logs show that the VM’s metadata was altered prior to the restart, likely to change the url of the image the VM boots from on startup. All of these actions were authorized through the compute-admin service account, which tells us that compute-admin is compromised.</p>
+	<p> </p>
+</details>
+
+<details>
+	<summary><b>Hint 6</b></summary>
+	<p> </p>
+	<p>We have reached the end of the level. We know that posts were being made from an endpoint added to the api-engine by the attacker, which was made possible by leveraging the compute-admin account to change the boot image for the api-engine in its metadata. In the next level, we will investigate how the attacker got access to the compute-admin account, and how they acquired the source code for the api-engine.</p>
 	<p> </p>
 </details>
 	
