not done with level 2 yet

--- a/_posts/2021-05-28-Level-1.md
+++ b/_posts/2021-05-28-Level-1.md
@@ -8,7 +8,7 @@ comments: false
 
 # Level 1
 
-Statuses are being made by accounts whose owners are not posting said statuses. Find out how the posts are being made, and identify the service account leveraged in the exploit.
+Statuses are being made by accounts whose owners are not posting said statuses. Find out how the posts are being made, how the attackers gained the ability to use that method, and identify the service account leveraged in the exploit.
 
 <details>
 	<summary><b>Hint 1</b></summary>
@@ -48,7 +48,7 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<p> to view the source code the VM is running.</p>
 	<p>Here you can see a list of endpoints for making requests to the database. The add user, follow user, and delete user endpoints are all expected, but at the bottom there is an endpoint labeled "hacked" which accepts any and all sequel queries, no questions asked.</p>
 	<p> </p>
-	<p>We now know how the statuses were being posted to the database, but we don't know how the attacker managed to replace the VM container image. Let's investigate that.</p>
+	<p>We now know how the statuses were being posted to the database, but we don't know how the attacker managed to replace the VM container image. Let's close the SSH window and investigate that.</p>
 	<p> </p>
 </details>
 	
