trying pre on other levels

--- a/_posts/2021-05-28-Level-2.md
+++ b/_posts/2021-05-28-Level-2.md
@@ -40,20 +40,22 @@ The attacker acquired the source code for the api-engine somehow, as well as the
 	<p> </p>
 	<p>We should be able to delete a service account key using the Google Cloud GUI, but it sometimes bugs out and cannot be used. So instead, use a gcloud command from the terminal to delete the key. First, list the keys for the compute-admin account.</p>
 	<p> </p>
-	<pre><code>gcloud iam service-accounts keys list --iam-account \</code>
+	<pre><code>gcloud iam service-accounts keys list \</code>
 	<code>--iam-account compute-admin@[project-id].iam.gserviceaccount.com</code>
 	</pre>
-	<p> </p>
 	<p>There should be two keys listed, one of which expires in two years, and one which expires in the year 9999, which is the default when a key is generated. The first key is used by Google’s backend and cannot be deleted, but the second is the key being stored in the vm-image-bucket. To delete it enter the gcloud command:</p>
 	<p> </p>
-	<code>gcloud iam service-accounts keys delete [key-id] --iam-account</code>
-	<code>compute-admin@[project-id].iam.gserviceaccount.com</code>
+	<pre><code>gcloud iam service-accounts keys delete [key-id] \</code>
+	<code>--iam-account compute-admin@[project-id].iam.gserviceaccount.com</code>
+	</pre>
 	<p> </p>
 </details>
 
 <details>
-	<summary><b>Hint </b></summary>
+	<summary><b>Hint 5</b></summary>
 	<p> </p>
+	<p>Finally, we should remove the json file from the bucket to clean it up. Using the console GUI search for buckets and navigate to the <code>vm-image-bucket</code>. Since we are using a system account, we can view the files in the bucket. Select the <code>compute-admin.json</code> file and remove it from the bucket. 
+The true final step would be to advise the company to have developers request an access key or other temporary key from a system admin(or some similar alternative) when they need to make changes to the api-engine, but as this is a fictitious system, we don’t need to do so for this exercise.</p>
 	<p> </p>
 </details>
 
