--- a/_posts/2021-05-28-Level-1.md
+++ b/_posts/2021-05-28-Level-1.md
@@ -14,7 +14,7 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<summary><b>Hint 1</b></summary>
 	<p></p>
 	<p>Referring to the system diagram, statuses are stored within a table in the database, and all communication with the database goes through the api-engine. Therefore, we should navigate to the Compute instances page of the console, and investigate the api-engine.</p> 
-	<code>https://console.cloud.google.com/compute/instances?project=[project_id]</code>
+	<pre><code>https://console.cloud.google.com/compute/instances?project=[project_id]</code></pre>
 	<p> </p>
 </details>
 
@@ -29,13 +29,13 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<summary><b>Hint 3</b></summary>
 	<p> </p>
   <p>The VM is built from a docker container, to  view the available containers, type:</p> 
-	<code>Docker container ls</code>
+	<pre><code>Docker container ls</code></pre>
 	<p> </p>
 	<p>You should quickly notice the attacker has kindly renamed the image being used, telling us that the image has been replaced and that the VM is running exploitative code. The last field of the container should be its name, which should look something like:</p>
-	<code>klt-a6-fnld</code>
+	<pre><code>klt-a6-fnld</code></pre>
 	<p> </p>
 	<p>We can open a shell within the container by entering:</p> 
-	<code>Docker exec -it [container_name] "/bin/sh"</code>
+	<pre><code>Docker exec -it [container_name] "/bin/sh"</code></pre>
 	<p> </p>
 </details>
 
@@ -43,7 +43,7 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<summary><b>Hint 4</b></summary>
 	<p> </p>
 	<p>Once in the container, simply type</p>
-	<code>cat main.py</code>
+	<pre><code>cat main.py</code></pre>
 	<p> </p>
 	<p> to view the source code the VM is running.</p>
 	<p>Here you can see a list of endpoints for making requests to the database. The add user, follow user, and delete user endpoints are all expected, but at the bottom there is an endpoint labeled "hacked" which accepts any and all sequel queries, no questions asked.</p>
