--- a/_posts/2021-05-28-Level-2.md
+++ b/_posts/2021-05-28-Level-2.md
@@ -60,8 +60,9 @@ The true final step would be to advise the company to have developers request an
 </details>
 
 <details>
-	<summary><b>Hint </b></summary>
+	<summary><b>Hint 6</b></summary>
 	<p> </p>
+	<p>This is the end of level 2. We found that the attacker used a developer service account to download the api-engine source code and compute-admin private key from a bucket, the latter of which we removed from the bucket and deleted from the system.</p>
 	<p> </p>
 </details>
 
