--- a/_posts/2021-05-28-Level-3.md
+++ b/_posts/2021-05-28-Level-3.md
@@ -43,7 +43,7 @@ In the last level, we found that the attacker used the <code>dev-account</code> 
 <details>
 	<summary><b>Hint 5</b></summary>
 	<p> </p>
-	<p>If we go back to our query for “dev-account” and view the log containing the private key, notice that one of the fields in the log specifies the logger that made the entry: <code>rmUser</code> 
+	<p>If we go back to our query for “dev-account” and view the log containing the private key, notice that one of the fields in the log specifies the logger that made the entry: <code>rmUser</code> </p>
 	<p> </p>
 </details>
 
