--- a/_posts/2021-05-27-Setup.md
+++ b/_posts/2021-05-27-Setup.md
@@ -9,7 +9,8 @@ comments: false
 # Project Setup 
 
 After creating a new project and enabling `billing` for it, open Cloud Shell and ensure that it points to the project you just created.
-```gcloud config set project [PROJECT-ID]
+```
+gcloud config set project [PROJECT-ID]
 ```
 
 Then, create a Python virtual environment that will be used to launch the exercises.
