Changed level 1 instruction from Docker to docker

--- a/_posts/2021-05-28-Level-1.md
+++ b/_posts/2021-05-28-Level-1.md
@@ -35,7 +35,7 @@ Statuses are being made by accounts whose owners are not posting said statuses. 
 	<pre><code>klt-a6-fnld</code></pre>
 	<p> </p>
 	<p>We can open a shell within the container by entering:</p> 
-	<pre><code>Docker exec -it [container_name] "/bin/sh"</code></pre>
+	<pre><code>docker exec -it [container_name] "/bin/sh"</code></pre>
 	<p> </p>
 </details>
 
